# windbus

./: .cvsignore  DBus-win32.patch  QtDBus-win32-qt43.patch  QtDBus-win32.patch  README.win  TODO.win  build-mingw.bat  config.h.in  configure  patch.bat  qt-qdbus-win32-snapshot20060921.patch  qt-qdbus-win32.patch  win-changes-before-merging.diff  windows-patch.diff
CVS/: Entries  Repository
bus/: activation.c  bus-service-win.c  config-parser.c  connection.c  dir-watch-default.c  dir-watch-dnotify.c  dir-watch-kqueue.c  dispatch.c  driver.c  main.c  policy.c  services.c
bus/CVS/: Entries  Repository
cmake/: CMakeLists.txt  ConfigureChecks.cmake  README-WIN32.txt  config.h.cmake  dbus-env.bat.cmake  dbus-launch.bat.cmake
cmake/CVS/: Entries  Repository
cmake/bus/: CMakeLists.txt  session.conf.cmake
cmake/bus/CVS/: Entries  Repository
cmake/dbus/: CMakeLists.txt  dbus-1.def  dbus-1.def.cmake  dbus-1d.def  dbus-arch-deps.h.cmake
cmake/dbus/CVS/: Entries  Repository
cmake/doc/CVS/: Entries  Repository
cmake/modules/: CPackInstallConfig.cmake  FindGNUWIN32.cmake  FindKDEWIN.cmake  FindLibExpat.cmake  FindLibXml2.cmake  FindQt4.cmake
cmake/modules/CVS/: Entries  Repository
cmake/pkg-config/: CMakeLists.txt
cmake/test/: CMakeLists.txt
cmake/test/CVS/: Entries  Repository
cmake/test/data/CVS/: Entries  Repository
cmake/test/data/valid-config-files/: debug-allow-all-sha1.conf.cmake  debug-allow-all.conf.cmake
cmake/test/data/valid-config-files/CVS/: Entries  Repository
cmake/test/name-test/: CMakeLists.txt
cmake/test/name-test/CVS/: Entries  Repository
cmake/tools/: CMakeLists.txt
cmake/tools/CVS/: Entries  Repository
dbus/: dbus-bus.c  dbus-connection.c  dbus-dirent-win.c  dbus-dirent-win.h  dbus-dirent.h  dbus-example.c  dbus-internals.c  dbus-internals.h  dbus-mainloop.c  dbus-misc.c  dbus-pending-call-internal.h  dbus-server-debug-pipe.h  dbus-server-unix.c  dbus-sockets-win.h  dbus-spawn-win.c  dbus-spawn.h  dbus-string.c  dbus-sysdeps-unix.c  dbus-sysdeps-util-unix.c  dbus-sysdeps-util-win.c  dbus-sysdeps-util.c  dbus-sysdeps-win-thread.c  dbus-sysdeps-win.c  dbus-sysdeps-win.h  dbus-sysdeps.c  dbus-sysdeps.h  dbus-test.c  dbus-threads.c  dbus-transport-unix.c  dbus-transport.c  dbus-watch.c
dbus/CVS/: Entries  Repository
doc/: dbus-faq.html  dbus-specification.html  dbus-test-plan.html  introspect.xsl
doc/CVS/: Entries  Repository
gcj/CVS/: Entries  Repository
gcj/org/CVS/: Entries  Repository
gcj/org/freedesktop/CVS/: Entries  Repository
glib/CVS/: Entries  Repository
glib/examples/CVS/: Entries  Repository
glib/examples/statemachine/CVS/: Entries  Repository
mono/: dbus-sharp.snk
mono/CVS/: Entries  Repository
mono/DBusType/CVS/: Entries  Repository
mono/doc/CVS/: Entries  Repository
mono/doc/en/CVS/: Entries  Repository
mono/example/CVS/: Entries  Repository
pkg-config/: Makefile  pkg-config.cpp  readme.txt
python/CVS/: Entries  Repository
python/examples/CVS/: Entries  Repository
qt/CVS/: Entries  Repository
qt/dbus/CVS/: Entries  Repository
qt/examples/CVS/: Entries  Repository
qt/src/CVS/: Entries  Repository
qt/tools/CVS/: Entries  Repository
qt3/CVS/: Entries  Repository
test/: spawn-test.c  test-segfault.c
test/CVS/: Entries  Repository
test/data/CVS/: Entries  Repository
test/data/auth/CVS/: Entries  Repository
test/data/equiv-config-files/CVS/: Entries  Repository
test/data/incomplete-messages/CVS/: Entries  Repository
test/data/invalid-config-files/CVS/: Entries  Repository
test/data/invalid-messages/CVS/: Entries  Repository
test/data/invalid-service-files-system/: org.freedesktop.DBus.TestSuiteNoService.service  org.freedesktop.DBus.TestSuiteNoUser.service
test/data/sha-1/: bit-hashes.sha1  bit-messages.sha1  byte-hashes.sha1  byte-messages.sha1
test/data/valid-config-files/: debug-allow-all-sha1.conf  debug-allow-all.conf  system.conf
test/data/valid-config-files-system/: debug-allow-all-fail.conf  debug-allow-all-pass.conf
test/data/valid-service-files/: org.freedesktop.DBus.TestSuite.PrivServer.service  org.freedesktop.DBus.TestSuiteEchoService.service  org.freedesktop.DBus.TestSuiteSegfaultService.service  org.freedesktop.DBus.TestSuiteShellEchoServiceFail.service  org.freedesktop.DBus.TestSuiteShellEchoServiceSuccess.service
test/data/valid-service-files-system/: org.freedesktop.DBus.TestSuiteEchoService.service  org.freedesktop.DBus.TestSuiteSegfaultService.service  org.freedesktop.DBus.TestSuiteShellEchoServiceFail.service  org.freedesktop.DBus.TestSuiteShellEchoServiceSuccess.service
test/glib/CVS/: Entries  Repository
test/name-test/: run-with-tmp-session-bus.conf  test-threads-init.c
test/name-test/CVS/: Entries  Repository
test/python/CVS/: Entries  Repository
test/qt/CVS/: Entries  Repository
tools/: dbus-launch-win.c  dbus-monitor.c  dbus-send.c
tools/CVS/: Entries  Repository
win-patches/: 001-dbus-dbus-internals.txt  002-dbus-dbus-internals.txt  003_dbus_printf_length.patch  003_dbus_printf_length.txt  004-dbus-dbus-internals.patch  005-dbus-win32-fds.patch  005-dbus-win32-fds.txt  006-dbus-dbus-sysdeps-util.patch  007-desktop-file-eol.patch  007-eol-1.patch  007-eol-2.patch  008-dbus-eol-fix.patch  009-dbus-spawn-envp.patch  010-dbus-transport-warn.patch  011-dbus-dbus-sysdeps-util-tests.patch  011-dbus-dbus-sysdeps-util-tests.txt  012-dbus-working-directory.patch  012-dbus-working-directory.txt  012-sysdeps-split.patch  013-dbus-internals.patch  013-socket-interface.patch  014-dbus-sysdeps-use-InterlockedIncrement.patch  015-dbus-sysdep-win-thread-compilefix.patch  016-dbus-monitor-gettimeofday.patch  017-dbus-marshal-recursive.patch  018-dbus_watch_get_fd.patch  019-configure.in-unistd-check-2.patch  019-configure.in-unistd-check.patch  020-unix-build-system-fix.patch  ACCEPTED-001-dbus-dbus-internals.patch  ACCEPTED-002-dbus-dbus-internals.patch  ACCEPTED-002-dbus-dbus-internals.txt  ACCEPTED-003_dbus_printf_length.patch  ACCEPTED-005-dbus-sysdeps-win-locks.patch  cmake-cvs.patch  readme.txt
(+30 files in other folders)
